# sd-neighborhood-pulse

./: .gitignore  .user.yml  README.md  main.py  profiles.yml  pyproject.toml
apps/: dashboard.py  dashboard_data.py  dashboard_helpers.py  dashboard_sections.py  dashboard_state.py  phase3_dashboard.py
city_health/: dbt_project.yml
city_health/models/marts/: fct_city_daily_metrics.sql  fct_city_service_daily_metrics.sql  fct_neighborhood_daily_metrics.sql  fct_neighborhood_frustration_index.sql  fct_neighborhood_service_daily_metrics.sql  fct_request_hotspots.sql  schema.yml
city_health/models/sources/: src_get_it_done_closed_2017_latest.sql  src_get_it_done_closed_2018_latest.sql  src_get_it_done_closed_2019_latest.sql  src_get_it_done_closed_2020_latest.sql  src_get_it_done_closed_2021_latest.sql  src_get_it_done_closed_2022_latest.sql  src_get_it_done_closed_2023_latest.sql  src_get_it_done_closed_2024_latest.sql  src_get_it_done_closed_2025_latest.sql  src_get_it_done_closed_2026_latest.sql  (+1 more)
city_health/snapshots/: snp_get_it_done_requests.sql
city_health/tests/: assert_frustration_index_bounds.sql  assert_geo_clean_council_district_canonical.sql  assert_geo_clean_zipcode_canonical.sql  assert_hotspot_unique_cluster_window.sql  assert_snapshot_key_unique_in_staging.sql  unique_stg_get_it_done_requests_key.sql
data/dictionaries/: get_it_done_dictionary.csv
data/geojson/: comm_plan_codes.geojson  council_districts.geojson
notebooks/: eda.ipynb  phase3_analysis.ipynb
scripts/: ingest.py  run_daily_pipeline.sh
tests/: test_ingest.py
(+2 files in other folders)
