[project]
name = "sd-neighborhood-pulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dbt-duckdb>=1.10.0",
    "duckdb>=1.4.4",
    "pandas>=2.3.3",
    "plotly>=6.0.0",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "streamlit>=1.44.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.4",
]
